--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html>
 <body>
 <head>Sebby is the best </head>
-  <p>hereiis paragraph text</p>
+  <p>Lets talk about Seb!</p>
   <br/>
-  <p>hereiis paragraph text</p>
-<li>
-  Being awesome
-  Football
-</li>
+  <p>Things Sebby is <strong>Awesome</strong> at!</p>
+<li>Being awesome</li>
+<li>Football</li> 
+<li>Maths tests!!!!!!!!</li>
+
 
 
 
